# wt-aircraft-performance-calculator

./: .gitignore  LICENSE  README.md  pyproject.toml  variabler_line_hits.json
ingame_power_log_files/: Bf-109G-2_1.91_climb_to_8k_270IAS.csv  b_26b_c-2024_06_19_08_10_46.csv  bv-238-2024_06_02_19_42_58.csv  f8f_alpha_strike_WEP_300kphIAS.csv  f8f_alpha_strike_WEP_6-12k_300IAS.csv  fw-190a-5_u2-2023_08_24_16_13_29_100%_700TAS_10K_climb.csv  hornet_mk3-2023_08_22_20_43_38_WEP_700TAS_7.5K.csv  hornet_mk3-2023_08_22_20_46_16_100%_700TAS_9K.csv  hornet_mk3-2024_06_10_700TAS_3000RPM_100%.csv  j2m4 10k climb 270kph 1.101 glued together.csv  ki-83-2023_04_285IAS.csv  la-7-2023_05_01_280IAS.csv  mosquito_fb_mk6-2024_05_29_14_52_32.csv  mosquito_fb_mk6-2024_05_29_14_55_30.csv  n1k1_kyuofu-2024_05_29_20_50_43.csv  p-51d-30_usaaf_korea-2023_08_25_14_55_41_100%_700tas_12k.csv  p-63a-10-2023_05_100%&WEP_280IAS.csv  p-63a-10-2023_05_500TAS.csv  p-63a-5-2023_05_500TAS.csv  p-63c-5-2023_05_100%_280IAS.csv  p-63c-5-2023_05_WEP_280IAS.csv  saab_b18b-2023_04_280IAS.csv  sample_i_185_m82-2024_06_1250.csv  sample_i_185_m82-2024_06_1325.csv  sample_i_185_m82-2024_06_13_14_57_34.csv  sample_i_185_m82-2024_06_13_14_59_13.csv  sample_i_185_m82-2024_06_13_15_02_23.csv  sample_i_185_m82-2024_06_13_15_05_29.csv  sample_i_185_m82-2024_06_13_16_34_44.csv  sample_i_185_m82-2024_06_13_16_36_48.csv  sample_i_185_m82-2024_06_13_16_46_35.csv  sample_i_185_m82-2024_06_13_16_49_30.csv  sample_i_185_m82-2024_06_13_16_51_24.csv  sample_i_185_m82-2024_06_13_16_55_44.csv  sample_i_185_m82-2024_06_13_16_57_48.csv  sample_i_185_m82-2024_06_13_17_08_46.csv  sample_i_185_m82-2024_06_13_21_10_37.csv  sample_i_185_m82-2024_06_13_21_15_22.csv  sample_i_185_m82-2024_06_13_21_17_07.csv  sample_i_185_m82-2024_06_1450.csv  (+15 more)
(+8964 files in other folders)
