[tool.poetry]
name = "wt-aircraft-performance-pre-calculator"
version = "1.1"
description = ""
authors = ["Alpakinator"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
plotly = "^5.22.0"
regex = "^2024.5.15"
requests = "^2.31.0"
fsspec = "^2024.5.0"
gitdb = "^4.0.11"
GitPython = "^3.1.43"
pillow  = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
    